# supplygraph

./: .env.simple  .gitignore  CODEBASE-ANALYSIS.md  COMPREHENSIVE_TEST_REPORT.md  CORE_FEATURES_TEST_REPORT.md  DATABASE-SETUP.md  DEPLOYMENT-GUIDE.md  DOCKER_INFRASTRUCTURE_VALIDATION_REPORT.md  E2E_TEST_REPORT.md  INFRASTRUCTURE_TEST_REPORT.md  README.md  SETUP-SUMMARY.md  TECHNICAL_DEBT_AUDIT.md  TEST-LOCALLY.md  TESTING_IMPLEMENTATION_EVIDENCE.md  create_schema.sql  database-setup.sql  demo-agui.tsx  deploy.sh  docker-compose.production.yml  docker-compose.sidecar.yml  docker-compose.simple.yml  docker-compose.yml  gmail-oauth-todo.md  manual_browser_test.md  package.json  pnpm-lock.yaml  prd.md  quick-test.sh  requirements-test.txt  seed_data.sql  seed_fixed.sql  start-services.sh  test-api-simple.sh  test-core-features.sh  test-final-integration.sh  test-fullstack-workflow.sh  test-gmail-oauth-simple.sh  test-infra.sh  test-integration-comprehensive.sh  (+16 more)
apps/ai-engine/: Dockerfile  E2E_TEST_REPORT.md  PRODUCTION_ENHANCEMENTS.md  VALKEY_MIGRATION.md  backend_docs_snapshot.txt  comprehensive_test.py  dashboard_snapshot.txt  openapi_snapshot.txt  pyproject.toml  test-snapshot-after-reload.json  test-snapshot-dashboard.json  test_agui_integration.py  test_http_agui.py  test_procurement_data.csv  test_realtime_workflow.py  test_valkey_migration.py  test_websocket.py  test_workflow_integration.py  upload_button_snapshot.txt  upload_status.txt  uv.lock.bak
apps/ai-engine/src/: __init__.py  basic_server.py  celery_config.py  main.py  main_production.py  simple_server.py  test_endpoint.py
apps/ai-engine/src/api/: routes.py
apps/ai-engine/src/middleware/: auth_middleware.py
apps/ai-engine/src/models/: validation.py
apps/ai-engine/src/services/: auth_service.py  vendor_email_service.py  websocket_manager.py  websocket_manager_prod.py
apps/ai-engine/src/tasks/: __init__.py  vendor_negotiation_tasks.py  websocket_tasks.py  workflow_tasks.py
apps/ai-engine/src/utils/: error_handling.py  logging.py  monitoring.py  performance_benchmark.py  session_manager.py  state_manager.py  valkey_manager.py
apps/ai-engine/src/workflows/: __init__.py  procurement.py
apps/ai-engine/tests/: test_agui_approval.py  test_complete_procurement_state_machine.py  test_production_edge_cases.py  test_valkey_integration.py  test_vendor_negotiation.py  test_workspace_isolation.py
apps/ai-service/: .env  .env.example  Dockerfile  README.md  conftest.py  migrate.py  pyproject.toml  schema.prisma  seed.py  test_api_integration.py  test_db_connection.py  test_document_processing.py  test_integration.py
apps/ai-service/prisma_client/: actions.py  bases.py  client.py  enums.py  metadata.py  models.py  schema.prisma  types.py
apps/ai-service/src/: __init__.py  config.py  database.py  main.py
apps/ai-service/src/routers/: __init__.py  health.py  procurement.py  quotes.py  workflows.py
apps/ai-service/src/services/: __init__.py  docling_service.py  email_service.py  gmail_service.py  llm_service.py  payment_service.py  vendor_service.py
apps/ai-service/src/workflows/: __init__.py  base.py  email_processing.py  manager.py  procurement.py  quote_processing.py
apps/ai-service/tests/: __init__.py  test_main.py
apps/ai-service/tests/email/: test_email_processing_workflow.py  test_gmail_service.py
apps/ai-service/tests/integration/: test_database.py
apps/ai-service/tests/payment/: test_stripe_service.py
apps/ai-service/tests/workflows/: test_base_workflow.py  test_procurement_workflow.py
config/: ai-engine-db-config.js  database-connection.json  frontend-db-config.js
monitoring/: alert_rules.yml  prometheus.yml
(+102 files in other folders)
